# eeBOOK

./: Cargo.toml  README.md
src/: chapter.rs  commands.rs  constants.rs  ebook.rs  event.rs  image.rs  main.rs  screen.rs  search.rs  toolbar.rs
src/ebook_mod/: implementation.rs  mod.rs  rendering.rs  search.rs  widget.rs
