[package]
name = "ebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
epub = {git = "https://github.com/danigm/epub-rs"} # Deal with epubs
regex = "1.5.6" # Parsing of HTML from epubs
serde = { version = "1.0.136", features = ["derive"] }
image = "0.24.3"
epub-builder = "0.5.0"